# dodentai

./: .gitignore  Makefile  README.md  pyproject.toml
accounts/: api.py  schemas.py  signals.py  tests.py
articles/: api.py  models.py  schemas.py  tests.py
articles/migrations/: 0001_initial.py  0002_remove_article_meta_keywords.py
auth/: api.py  schemas.py
backend/: api.py  settings.py  urls.py
backend/common/: base_test.py
frontend/src/app/: page.jsx
frontend/src/app/api/: page.jsx
frontend/src/app/api/login/: route.jsx
frontend/src/app/api/logout/: route.jsx
frontend/src/app/lib/: auth.jsx
frontend/src/app/login/: page.jsx
frontend/src/app/logout/: page.jsx
profiles/: api.py  models.py  schemas.py  tests.py
profiles/migrations/: 0001_initial.py  0002_remove_profile_bio_profile_biography_and_more.py  0003_profile_following.py  0004_remove_profile_following.py  0005_rename_last_active_profile_last_active_at.py
schemas/: common.py  profile.py  social.py  user.py
social/: admin.py  api.py  models.py  tests.py
social/migrations/: 0001_initial.py
