[project]
name = "dodentai"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django-allauth>=64.2.1",
  "django-cors-headers>=4.4.0",
  "django-ninja>=1.3.0",
  "django>=5.1.1",
  "environs>=11.0.0",
  "gunicorn>=23.0.0",
  "psycopg[binary]>=3.2.2",
  "redis[hiredis]>=5.0.8",
]

[tool.uv]
dev-dependencies = ["django-debug-toolbar>=4.4.6"]
